# pyxl-cli

./: .dockerignore  .gitignore  Dockerfile  Makefile.toml  README.md  mypy.ini  output.xlsx  output2.xlsx  pyproject.toml  tox.ini
.github/workflows/: pull_request.yml
pyxl-cli/: excel.py  main.py
src/: excel.py  main.py
tests/: conftests.py
tests/e2e/: test_cli.py  test_e2e.py
tests/e2e/xlsx/: input.csv  input.ssv  input.tsv  output.xlsx  output2.xlsx  template.xlsx
