[tool.black]
line-length = 79
exclude = '''
(
    migrations
    | .mypy_cache
    | .pytest_cache
    | .tox
    | .venv
)
'''

[tool.poetry]
name = "pyxl-cli"
version = "0.1.0"
description = "openpyxl wrapper for cli use"
authors = ["wataru-kurashima <wataru-kurashima@hands-lab.com>"]
license = "MIT"
packages = [
    { include="src", from="." },
]

[tool.poetry.scripts]
pyxl = "src.main:cli"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
openpyxl = "^3.0.4"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
black = "^19.10b0"
tox = "^3.16.1"
pytest = "^5.4.3"
flake8 = "^3.8.3"
isort = "^4.3.21"
pytest-cov = "^2.10.0"
pandas = "^1.0.5"
xlrd = "^1.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
